--- a/_includes/content.html
+++ b/_includes/content.html
@@ -3,7 +3,7 @@
 <hr />
 
 <p>I have been developing software applications since my High school years.
-  I started to working as a software enginneer in 2016 especially Backend Development</p>
+  I started to work as a software engineer in 2016 and focused on backend development</p>
 <hr />
 
 <p>I live in Istanbul, Turkey. I am a fan of technology, programming, and writing.</p>
